--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/star.css">
     <link rel="icon" href="assets/img/YC-Icone.png">
+    <link href='https://fonts.googleapis.com/css?family=Yellowtail:400' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <header id="accueil">
@@ -44,7 +45,7 @@
                 <ul class="hyperliens">
                     <li class="txtLI"><span class="navbarLinks" onclick="scrollElement0()">Accueil</span></li>
                     <li class="txtLI"><span class="navbarLinks" onclick="scrollElement()">À propos</span></li> 
-                    <li class="txtLI"><span class="navbarLinks" onclick="scrollElement2()">Projets</span></li>
+                    <li class="txtLI"><span class="navbarLinks prjt" onclick="scrollElement2()">Projets</span></li>
                     <li class="txtLI"><span class="navbarLinks" onclick="scrollElement3()">Contact</span></li>
                     <a href="en-en.html">
                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 55.2 38.4" style="enable-background:new 0 0 55.2 38.4" xml:space="preserve" class="drapeau">
@@ -91,6 +92,44 @@
                     Le premier programme que j'ai réalisé est un jeu à choix multiples en python. Si mon profil vous intéresse, n'hésitez pas à me contacter.
                 </p>
             </div>
+            <div class="containerBtn">
+                <a href="assets/medias/CHATELET-Yanis.pdf" target="_blank"><button type="button" class="btn">CV</button></a>
+            </div>
+        </section>
+        <section id="projets">
+            <h3 class="titreCat titrePrjt">Projets</h3>
+            <article class="cards">
+                <div class="leftCards">
+                    <div class="cardContent">
+                        <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
+                        <h4 class="creaName">JS - POO</h4>
+                        <p class="descrCard">Programmation objet en JS</p>
+                        <button class="btn btnCard">Voir plus</button>
+                    </div>
+                    <!--BAS-->
+                    <div class="cardContent">
+                        <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
+                        <h4 class="creaName">JS - POO</h4>
+                        <p class="descrCard">Programmation objet en JS</p>
+                        <button class="btn btnCard">Voir plus</button>
+                    </div>
+                </div>
+                <div class="rightCards">
+                    <div class="cardContent">
+                        <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
+                        <h4 class="creaName">JS - POO</h4>
+                        <p class="descrCard">Programmation objet en JS</p>
+                        <button class="btn btnCard">Voir plus</button>
+                    </div>
+                    <!--BAS-->
+                    <div class="cardContent">
+                        <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
+                        <h4 class="creaName">JS - POO</h4>
+                        <p class="descrCard">Programmation objet en JS</p>
+                        <button class="btn btnCard">Voir plus</button>
+                    </div>
+                </div>
+            </article>
         </section>
     </main>
 </body>
