--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <meta name="description" content="Je m'appelle Yanis CHATELET, je suis un étudiant en BUT Métiers du Multimédia et de l'Internet et voici mon site portfolio !">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/star.css">
+    <link rel="stylesheet" href="assets/css/cursor.css">
     <link rel="icon" href="assets/img/YC-Icone.png">
     <link href='https://fonts.googleapis.com/css?family=Yellowtail:400' rel='stylesheet' type='text/css'>
 </head>
 <body>
+    <div id="stalker"></div>
     <header id="accueil">
         <div class="stars" style="color:#FFFFFF;">
             <div class="star"></div>
@@ -104,14 +106,15 @@
                         <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
                         <h4 class="creaName">JS - POO</h4>
                         <p class="descrCard">Programmation objet en JS</p>
-                        <button class="btn btnCard">Voir plus</button>
+                        <a href=""><button class="btn btnCard">Voir plus</button></a>
                     </div>
                     <!--BAS-->
                     <div class="cardContent">
                         <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
                         <h4 class="creaName">JS - POO</h4>
                         <p class="descrCard">Programmation objet en JS</p>
-                        <button class="btn btnCard">Voir plus</button>
+                        <a href=""><button class="btn btnCard">Voir plus</button></a>
+                        
                     </div>
                 </div>
                 <div class="rightCards">
@@ -119,14 +122,14 @@
                         <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
                         <h4 class="creaName">JS - POO</h4>
                         <p class="descrCard">Programmation objet en JS</p>
-                        <button class="btn btnCard">Voir plus</button>
+                        <a href=""><button class="btn btnCard">Voir plus</button></a>
                     </div>
                     <!--BAS-->
                     <div class="cardContent">
                         <img src="assets/img/js-poo_card.webp" alt="JS POO" class="creaImg">
                         <h4 class="creaName">JS - POO</h4>
                         <p class="descrCard">Programmation objet en JS</p>
-                        <button class="btn btnCard">Voir plus</button>
+                        <a href=""><button class="btn btnCard">Voir plus</button></a>
                     </div>
                 </div>
             </article>
